--- a/style.css
+++ b/style.css
@@ -1,83 +1,115 @@
 /*font-family: 'Jost', sans-serif;*/
 /*rgba(181,6,6,1.0);*/
-*,html,h1,h2,h3,h4,h5,h6,span, a{
-font-family: 'Jost', sans-serif;
+*,
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+a {
+	font-family: 'Jost', sans-serif;
 }
+
 a {
 	transition: 0.5s;
 }
+
 a:hover,
 a:focus,
 a:active {
 	opacity: 0.7;
 }
+
 /*HEADER*/
 .header-wrapper {
-position: relative;
-background: #fff;
+	position: relative;
+	background: #fff;
 }
+
 .header-wrapper .header-inner {
-padding: 12px 0px;
+	padding: 12px 0px;
 }
+
 .header-wrapper .container {
-width: 100%;
-padding: 0px 50px;
-max-width: 100%;
+	width: 100%;
+	padding: 0px 50px;
+	max-width: 100%;
 }
+
 .header-wrapper .header-contact-inner {
-display: none;
+	display: none;
 }
+
 .header-wrapper .header-logo {
-z-index: 18;
-text-align: center;
+	z-index: 18;
+	text-align: center;
 }
-.header-wrapper .header-btn a{
-display: inline-block;
-color: #fff;
-font-size: 17px;
-letter-spacing: 0;
-line-height: 21px;
-background: rgba(181,6,6,1.0);
-padding: 10px 15px;
-text-decoration: none;
+
+.header-wrapper .header-btn a {
+	display: inline-block;
+	color: #fff;
+	font-size: 17px;
+	letter-spacing: 0;
+	line-height: 21px;
+	background: rgba(181, 6, 6, 1.0);
+	padding: 10px 15px;
+	text-decoration: none;
 }
+
 /*NAVBAR*/
 .navbar-light .navbar-toggler {
-border: none;
-color: #fff;
+	border: none;
+	color: #fff;
 }
+
 .nav-wrapper .nav-inner {
-background: rgba(181,6,6,1.0);
+	background: rgba(181, 6, 6, 1.0);
 }
+
 .nav-wrapper .bg-light {
-background-color: #b50606!important;
+	background-color: #b50606 !important;
 }
+
 .navbar-light .navbar-nav .nav-link {
-color: #fff;
-padding-right: 15px;
-padding-left: 15px;
+	color: #fff;
+	padding-right: 15px;
+	padding-left: 15px;
 }
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-color: rgba(255,255,255,0.8);
+
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
+	color: rgba(255, 255, 255, 0.8);
 
 }
+
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.navbar-right {
-justify-content: flex-end;
+	justify-content: flex-end;
 }
+
 .navbar-light .navbar-nav .nav-link,
 .navbar-light .navbar-nav .nav-link {
 	transition: 0.5s;
 }
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    color: rgba(255,255,255,.7);
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+	color: rgba(255, 255, 255, .7);
 }
+
 div#navbarText {
-justify-content: flex-end;
+	justify-content: flex-end;
 }
+
 /*Banner*/
 .banner-wrapper {
 	position: relative;
 }
+
 .banner-wrapper .banner-inner {
 	width: 100%;
 	height: 300px;
@@ -86,13 +118,15 @@ justify-content: flex-end;
 	background-size: cover;
 	color: white;
 }
+
 .banner-wrapper .banner-copy-inner {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	height: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
+
 .banner-wrapper .banner-copy-title {
 	font-size: 44px;
 	font-weight: 800;
@@ -102,9 +136,11 @@ justify-content: flex-end;
 	letter-spacing: 0;
 	padding-bottom: 10px;
 }
+
 .banner-wrapper .banner-copy-title-1 {
-	color: rgba(181,6,6,1.0);
+	color: rgba(181, 6, 6, 1.0);
 }
+
 .banner-wrapper .banner-copy-text {
 	display: none;
 	color: #fff;
@@ -114,6 +150,7 @@ justify-content: flex-end;
 	line-height: 31px;
 
 }
+
 .banner-wrapper .banner-copy-btn {
 	display: block;
 }
@@ -134,13 +171,16 @@ justify-content: flex-end;
 .banner-wrapper .banner-form-wrapper {
 	display: none;
 }
+
 /*ABOUT*/
 .about-wrapper {
 	position: relative;
 }
+
 .about-wrapper .about-inner {
 	padding: 40px 0px;
 }
+
 .about-wrapper .about-title-line-1 {
 	font-size: 21px;
 	font-weight: 300;
@@ -151,6 +191,7 @@ justify-content: flex-end;
 	display: block;
 	text-align: center;
 }
+
 .about-wrapper .about-title-line-2 {
 	font-size: 26px;
 	font-weight: 600;
@@ -172,38 +213,49 @@ justify-content: flex-end;
 	display: block;
 	text-align: center;
 }
+
 /*GALLERY*/
 .gallery-wrapper {
 	position: relative;
 }
+
 .gallery-wrapper .container {
 	width: 100%;
 	max-width: 100%;
 }
-.gallery-wrapper .container, .gallery-wrapper .row, .gallery-wrapper .col-sm-4 {
+
+.gallery-wrapper .container,
+.gallery-wrapper .row,
+.gallery-wrapper .col-sm-4 {
 	margin: 0;
-	padding:0;
+	padding: 0;
 }
+
 .gallery-wrapper .gallery-item {
 	background: black;
 }
+
 .gallery-wrapper img {
 	transition: 0.5s;
 }
+
 .gallery-wrapper .gallery-item img {
 	opacity: 0.5;
 }
+
 .gallery-wrapper .gallery-item:hover img {
 	opacity: 1;
-} 
+}
 
 /*Footer*/
 .footer-wrapper {
 	position: relative;
 }
+
 .footer-wrapper .footer-inner {
 	padding: 20px 0px;
 }
+
 .footer-wrapper .footer-content {
 	font-size: 12px;
 	line-height: 1.4;
@@ -212,195 +264,225 @@ justify-content: flex-end;
 	display: block;
 
 }
+
 .footer-wrapper .social-media {
 	display: block;
 	text-align: right;
 }
+
 .footer-wrapper .social-media a {
-	color: rgba(181,6,6,1.0);
+	color: rgba(181, 6, 6, 1.0);
 	line-height: 50px;
 	font-size: 30px;
 	width: 50px;
 	height: 50px;
-	border: 1px solid rgba(181,6,6,.5);
+	border: 1px solid rgba(181, 6, 6, .5);
 	display: inline-block;
 	text-align: center;
 }
 
 
-@media (min-width: 768px){
-/*Header*/
-.header-wrapper .header-logo {
-text-align: left ;
-}
-.header-wrapper .header-contact-inner {
-display: block;
-padding-top: 20px;
-}
-.header-wrapper .header-btn {
-display: block;
-}
-.header-wrapper .header-contact-inner span:first-of-type {
-margin-bottom: 5px;
-}
-.header-wrapper .header-contact-inner span:first-of-type a {
-padding: 10px 18px;
-}
+@media (min-width: 768px) {
 
-/*Banner*/
+	/*Header*/
+	.header-wrapper .header-logo {
+		text-align: left;
+	}
 
-.banner-wrapper .banner-inner {
-	height: 600px;
-}
-.banner-wrapper .banner-copy-text {
-	display: block;
-	padding-bottom: 10px;
-}
-.banner-wrapper .banner-copy-inner {
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-/*ABOT*/
-.about-wrapper {
-	background: url('assets/about/bg.jpg');
-	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-}
-.about-wrapper .about-title-line-2 {
-	font-size: 32px;
-	line-height: 1.2;
+	.header-wrapper .header-contact-inner {
+		display: block;
+		padding-top: 20px;
+	}
 
-}
-.about-wrapper .about-content {
-	padding-bottom: 0px;
-}
+	.header-wrapper .header-btn {
+		display: block;
+	}
 
-}
+	.header-wrapper .header-contact-inner span:first-of-type {
+		margin-bottom: 5px;
+	}
 
+	.header-wrapper .header-contact-inner span:first-of-type a {
+		padding: 10px 18px;
+	}
 
+	/*Banner*/
 
-@media (min-width: 992px){
-.header-wrapper .header-btn {
-display: inline-block;
-}
-.header-logo {
-position: absolute;
-}
-.header-wrapper .header-contact-inner {
-padding: 5px 0px;
-}
-.header-wrapper .header-inner {
-    padding-bottom: 5px;
-}
+	.banner-wrapper .banner-inner {
+		height: 600px;
+	}
 
-/*NAVBAR*/
-.nav-wrapper .bg-light {
-    background-image: linear-gradient(130deg, #fff 50%, rgb(181, 6, 6) 0%);
-}
-.nav-wrapper .nav-link {
-    line-height: 50px;
-    font-size: 17px;
-    letter-spacing: 0px;
-}
-/*BANNER FORM*/
-.banner-wrapper .banner-form-wrapper {
-    display: flex;
-    height: 600px;
-    justify-content: center;
-    align-items: center;
+	.banner-wrapper .banner-copy-text {
+		display: block;
+		padding-bottom: 10px;
+	}
 
-}
+	.banner-wrapper .banner-copy-inner {
+		height: 600px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+	}
 
-.banner-wrapper .banner-form-inner {
-    padding: 50px 30px;
-    background: #b50606;
-}
-.banner-wrapper .from-heading {
-	font-size: 21px;
-	line-height: 31px;
-	letter-spacing: 0;
-	font-weight: 300;
-	padding-bottom: 10px;
-	display: block;
-}
+	/*ABOT*/
+	.about-wrapper {
+		background: url('assets/about/bg.jpg');
+		background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+	}
 
-.banner-wrapper input {
-    background: none;
-    border: 1px solid rgba(255,255,255,0.5);
-    margin-bottom: 10px;
-    padding: 7px 7px;
-    width: 100%;
-    color: rgba(255,255,255,0.5);
-    font-size: 19px;
-    letter-spacing: 0;
-    line-height: 31px;
-    font-weight: 300;
-}
-.banner-wrapper textarea {
-	background: none;
-    border: 1px solid rgba(255,255,255,0.5);
-    margin-bottom: 10px;
-    padding: 7px 7px;
-    width: 100%;
-    color: rgba(255,255,255,0.5);
-    font-size: 19px;
-    letter-spacing: 0;
-    line-height: 31px;
-    font-weight: 300;
-    height: 100px;
-}
-.banner-wrapper [type="submit"] {
-	background: #161616;
-	display: inline-block;
-	width: auto;
-	padding: 10px 20px;
-color: #fff;
-float: right;
-}
+	.about-wrapper .about-title-line-2 {
+		font-size: 32px;
+		line-height: 1.2;
 
-/*ABOIT*/
-.about-wrapper .about-inner {
-	padding: 70px 0px;
-}
-.about-wrapper .about-title-line-1 {
-	font-size: 26px;
-	line-height: 1.2;
+	}
 
-}
-.about-wrapper .about-title-line-2 {
-	font-size: 41px;
-	line-height: 1.2;
-
-}
-.about-wrapper .about-content {
-	font-size: 21px;
+	.about-wrapper .about-content {
+		padding-bottom: 0px;
+	}
 
 }
 
 
+
+@media (min-width: 992px) {
+	.header-wrapper .header-btn {
+		display: inline-block;
+	}
+
+	.header-logo {
+		position: absolute;
+	}
+
+	.header-wrapper .header-contact-inner {
+		padding: 5px 0px;
+	}
+
+	.header-wrapper .header-inner {
+		padding-bottom: 5px;
+	}
+
+	/*NAVBAR*/
+	.nav-wrapper .bg-light {
+		background-image: linear-gradient(130deg, #fff 50%, rgb(181, 6, 6) 0%);
+	}
+
+	.nav-wrapper .nav-link {
+		line-height: 50px;
+		font-size: 17px;
+		letter-spacing: 0px;
+	}
+
+	/*BANNER FORM*/
+	.banner-wrapper .banner-form-wrapper {
+		display: flex;
+		height: 600px;
+		justify-content: center;
+		align-items: center;
+
+	}
+
+
+
+	.banner-wrapper .banner-form-inner {
+		padding: 50px 30px;
+		background: #b50606;
+	}
+
+	.banner-wrapper .from-heading {
+		font-size: 21px;
+		line-height: 31px;
+		letter-spacing: 0;
+		font-weight: 300;
+		padding-bottom: 10px;
+		display: block;
+	}
+
+	.banner-wrapper input {
+		background: none;
+		border: 1px solid rgba(255, 255, 255, 0.5);
+		margin-bottom: 10px;
+		padding: 7px 7px;
+		width: 100%;
+		color: rgba(255, 255, 255, 0.5);
+		font-size: 19px;
+		letter-spacing: 0;
+		line-height: 31px;
+		font-weight: 300;
+	}
+
+	.banner-wrapper textarea {
+		background: none;
+		border: 1px solid rgba(255, 255, 255, 0.5);
+		margin-bottom: 10px;
+		padding: 7px 7px;
+		width: 100%;
+		color: rgba(255, 255, 255, 0.5);
+		font-size: 19px;
+		letter-spacing: 0;
+		line-height: 31px;
+		font-weight: 300;
+		height: 100px;
+	}
+
+	.banner-wrapper [type="submit"] {
+		background: #161616;
+		display: inline-block;
+		width: auto;
+		padding: 10px 20px;
+		color: #fff;
+		float: right;
+	}
+
+	/*ABOIT*/
+	.about-wrapper .about-inner {
+		padding: 70px 0px;
+	}
+
+	.about-wrapper .about-title-line-1 {
+		font-size: 26px;
+		line-height: 1.2;
+
+	}
+
+	.about-wrapper .about-title-line-2 {
+		font-size: 41px;
+		line-height: 1.2;
+
+	}
+
+	.about-wrapper .about-content {
+		font-size: 21px;
+
+	}
+
+
 }
+
 @media (min-width: 1200px) {
 
 	.banner-wrapper .banner-inner {
-	height: 750px;
-}
-.banner-wrapper .banner-copy-inner {
-    height: 750px;
-   
-}
+		height: 750px;
+	}
 
-.banner-wrapper .banner-form-wrapper {
-	height: 750px;
-}
-/*ABOUT*/
-.about-wrapper .about-inner {
-	padding: 120px 0px;
-}
+	.banner-wrapper .banner-copy-inner {
+		height: 750px;
+
+	}
+
+	.banner-wrapper .banner-form-wrapper {
+		height: 750px;
+	}
+
+	.banner-wrapper ::placeholder {
+		color: rgba(255, 255, 255, 0.6);
+	}
+
+	/*ABOUT*/
+	.about-wrapper .about-inner {
+		padding: 120px 0px;
+	}
 
 }
-
- 
