.banner-wrapper updated

--- a/style.css
+++ b/style.css
@@ -413,6 +413,10 @@ div#navbarText {
 		font-weight: 300;
 	}
 
+	.banner-wrapper ::placeholder {
+		color: rgba(255, 255, 255, 0.5);
+	}
+
 	.banner-wrapper textarea {
 		background: none;
 		border: 1px solid rgba(255, 255, 255, 0.5);
